# api-workshop

./: main.py  pyproject.toml  requirements-dev.txt  tests.py
.github/workflow/: main.yaml  main.yml
.github/workflows/: main.yml
app/: data.py  main.py  schema.py
tests/: test_api.py  test_testes.py
